<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseColor"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginHorizontal="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_name"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/splash_icon" />

        <EditText
            android:id="@+id/et_surname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_surname"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_name" />

        <EditText
            android:id="@+id/et_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_id"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_surname" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_email"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_id" />
        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_password"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <Button
            android:id="@+id/btn_login"
            android:onClick="goToWelcome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:background="@drawable/btn_login"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/btn_signup_continue"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>