<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Home">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/memu_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:paddingVertical="15dp"
        android:paddingLeft="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/vector"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/memu_bar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingHorizontal="20dp"
            android:paddingVertical="20dp"
            app:layout_constraintTop_toBottomOf="@id/memu_bar"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/pts_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/green_border"
                android:paddingHorizontal="15dp"
                android:paddingVertical="8dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent">

                <TextView
                    android:id="@+id/pts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pts"
                    android:scrollbarSize="14sp"
                    android:textColor="@color/greencode"/>

                <TextView
                    android:id="@+id/user_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_points"
                    android:textSize="14sp"
                    android:textColor="@color/greencode"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toRightOf="@id/pts"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/eye"
                    android:layout_marginLeft="145dp"
                    app:layout_constraintLeft_toRightOf="@id/pts"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                app:layout_constraintTop_toBottomOf="@id/pts_infos">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_user"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/image_user"/>

                <TextView
                    android:id="@+id/hi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hi"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintLeft_toRightOf="@id/image_user"/>

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintTop_toBottomOf="@id/hi"
                    app:layout_constraintLeft_toRightOf="@id/image_user"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/qrcode_infos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@id/welcome">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/qrcode_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/qrcode_btn"
                    android:layout_marginLeft="15dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <TextView
                    android:id="@+id/qrcode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/qrcode"
                    android:textSize="24sp"
                    android:layout_marginLeft="25dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    app:layout_constraintLeft_toRightOf="@id/qrcode_image"/>

                <TextView
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:text="@string/qrcode_infos"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:layout_marginRight="70dp"
                    android:layout_marginLeft="25dp"
                    app:layout_constraintTop_toBottomOf="@id/qrcode"
                    app:layout_constraintLeft_toRightOf="@id/qrcode_image"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/green_background"
                android:paddingVertical="20dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="45dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/qrcode_infos">

                <TextView
                    android:id="@+id/location_txt"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:text="@string/location_txt"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/location_icon"
                    app:layout_constraintRight_toRightOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/congrats_infos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="20dp"
                android:paddingHorizontal="15dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/dark_green_background"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/location">
            
                <TextView
                    android:id="@+id/congrats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congrats"
                    android:textSize="24sp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/user_name_congrats"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textSize="24dp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_marginLeft="7dp"
                    app:layout_constraintLeft_toRightOf="@id/congrats"/>


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/happy_icon"
                    app:layout_constraintRight_toRightOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/congrats_txt"
                    android:textSize="14sp"
                    android:textColor="@color/white"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="25dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/congrats"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/marketplace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:layout_constraintTop_toBottomOf="@id/congrats_infos">

                <TextView
                    android:id="@+id/marketplace_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marketplace"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/marketplace_infos"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/market_txt"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    app:layout_constraintTop_toBottomOf="@id/marketplace_txt"/>

                <Button
                    android:onClick="goToMarketplace"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/marketplace_btn"
                    android:textColor="@color/greencode"
                    android:background="@drawable/green_border"
                    android:layout_marginTop="25dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginHorizontal="70dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/marketplace_infos"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/greencode_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greecode_way"
                android:textColor="@color/black"
                android:layout_marginTop="35dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/marketplace"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>