<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/baseColor"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="70dp"
        android:layout_marginVertical="80dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/splash_icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_email"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="95dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/icon"/>

        <EditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/et_signup_password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:background="@drawable/et_signup"
            android:textStyle="italic"
            android:paddingVertical="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="40dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email"/>

        <TextView
            android:id="@+id/txt_keep_credencials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_credentials"
            android:textSize="14sp"
            android:textStyle="italic|bold"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="2dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_btn"
            style="@style/SwitchCompatStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:switchMinWidth="60dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_keep_credencials"/>

        <Button
            android:onClick="goToHomePage"
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:background="@drawable/green_background"
            android:paddingHorizontal="40dp"
            android:paddingVertical="20dp"
            android:text="@string/btn_do_login"
            android:textSize="18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>