<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cupom">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/cupom_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/cupom"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <TextView
            android:id="@+id/cupom_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cupom_congrats"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/cupom_image"/>


        <TextView
            android:id="@+id/keep_the_good_work"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_the_good_work"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/greencode"
            android:layout_marginTop="25dp"
            app:layout_constraintTop_toBottomOf="@id/cupom_txt"/>

        <Button
            android:onClick="backToHome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_home"
            android:textSize="18sp"
            android:textStyle="bold"
            android:background="@drawable/green_background"
            android:paddingHorizontal="30dp"
            android:paddingVertical="20dp"
            android:layout_marginTop="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keep_the_good_work"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>