<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="95dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/happy_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/happy_icon"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/txt_congrats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_welcome_congrats"
            android:textStyle="bold"
            android:textColor="@color/txt_color"
            android:textSize="24sp"
            android:layout_marginTop="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/happy_icon"/>

        <TextView
            android:id="@+id/txt_info"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tv_welcome_info"
            android:textColor="@color/txt_color"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginTop="35dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_congrats"/>

        <Button
            android:onClick="goToFirstAccess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_welcome"
            android:textStyle="bold"
            android:textSize="18sp"
            android:background="@drawable/btn_login"
            android:paddingHorizontal="25dp"
            android:paddingVertical="20dp"
            android:layout_marginTop="120dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt_info"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>